tests/mm0_mmu/fail/bad-sort4.mmu
(sort s10 free strict sort)